# MultiRank-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.images.yml  docker-compose.yml  pyproject.toml  requirements.backend.txt  requirements.txt  执行清单.md
backend/: README.md  __init__.py  app.py  config.py
configs/: doubao_optimized.env.example  rerank_branch.json
data/: manual_nodes.csv  question.csv  questions.csv  questions_showcase_20260528.csv
demo/: app.py
docs/: ARCHITECTURE.md  DOCKER_CICD.md  EVALUATION.md  EXPERIMENTS.md  GRAPHRAG.md  MODEL_GATEWAY.md  PPT大纲.md  PUBLIC_BENCHMARK_RESULTS.md  REPOSITORY_GUIDE.md  REPOSITORY_STRUCTURE.md  embedding_retrieval.md  manual_dataset_gold_labels_20260527.csv  manual_showcase_selection_20260528.csv  mmlongbench_doc_visual_retest_20260525.csv  public_benchmark_ablation_20260520.csv  实验与指标说明.md  技术路线.md  数据标注说明.md  每日同步模板.md  演示脚本.md  结题报告提纲.md
multirank_rag/: __init__.py  common.py  legacy.py
outputs/: README.md
projects/: README.md
scripts/: 01_parse_pdf.py  02_build_graph.py  03_retrieve_candidates.py  04_rerank.py  05_evaluate.py  06_run_pipeline.py  07_write_multimodal_questions.py  08_compare_methods.py  09_build_evidence_chains.py  10_build_visual_evidence.py  11_build_evidence_cards.py  12_check_evidence_cards.py  12_evaluate_evidence_chains.py  13_export_frontend_data.py  14_chunk_quality_report.py  15_visualize_layout_bboxes.py  16_import_datafountain.py  17_generate_datafountain_submission.py  18_generate_datafountain_submission_llm.py  21_generate_answer.py  (+32 more)
(+58 files in other folders)
